# tool-cli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  install.ps1  install.sh  plan.md
.github/workflows/: release.yml  rust_audit.yml  rust_checks.yml  rust_tests.yml
cookbooks/: README.md
cookbooks/claude-code/: code-mode-agent.md  normal-agent.md
cookbooks/claude-code/.claude/agents/: code-mode-agent.md
cookbooks/langchain/: README.md  agent.py  bash_server.py  open_data_server.py  pyproject.toml  test_open_data.py
cookbooks/langchain/agent/: README.md  agent.py  pyproject.toml
cookbooks/langchain/bash_mcp/: manifest.json  server.py
cookbooks/langchain/open_data_mcp/: README.md  server.py
cookbooks/mcps/bash_mcp/: README.md  pyproject.toml  server.py
cookbooks/mcps/open_data_mcp/: manifest.json  pyproject.toml  test_server.py
lib/: commands.rs  concise.rs  constants.rs  error.rs  format.rs  hosts.rs  lib.rs  mcp.rs  mcpb.rs  oauth.rs  output.rs  pack.rs  prompt.rs  proxy.rs  references.rs  registry.rs  resolver.rs  scaffold.rs  security.rs  self_update.rs  styles.rs  suggest.rs  system_config.rs  tree.rs  validate.rs  vars.rs
lib/detect/: mod.rs  node.rs  python.rs  rust.rs  utils.rs
lib/handlers/: auth.rs  mod.rs  tool.rs
lib/handlers/tool/: call.rs  common.rs  config_cmd.rs  detect_cmd.rs  grep.rs  host_cmd.rs  info.rs  init.rs  install.rs  list.rs  mod.rs  pack_cmd.rs  preview.rs  publish.rs  registry.rs  run.rs  scripts.rs  search.rs  uninstall.rs  validate_cmd.rs
lib/mcpb/: init_mode.rs  manifest.rs  mod.rs  platform.rs  resolved.rs  types.rs
lib/validate/: codes.rs  mod.rs  result.rs  tests.rs
lib/validate/validators/: core.rs  fields.rs  mod.rs  paths.rs  platforms.rs  recommended.rs  scripts.rs  standard.rs  tools.rs  variables.rs
scripts/: install.sh  setup-install-domain.sh
