[project]
name = "langchain-mcp-agent"
version = "0.1.0"
description = "Basic AI agent using MCP with LangChain"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "mcp>=1.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
]
