[project]
name = "open-data-mcp"
version = "0.1.0"
description = "MCP server providing access to free public JSON APIs"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
    "rich>=13.0.0",
]

[project.scripts]
open-data-mcp = "server:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["server"]
